uploader-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader-api
  labels:
    app: uploader-api
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
  selector:
    app: uploader-api
